Servis sınıfı eklendi. Rapor modelleri eklendi. Factory sınıfı eklendi.

--- a/Api.Reports.Repositories/Api.Reports.Repositories.csproj
+++ b/Api.Reports.Repositories/Api.Reports.Repositories.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RestSharp" Version="106.11.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Api.Reports.Entitiy\Api.Reports.Entitiy.csproj" />
   </ItemGroup>
 
